// Copyright 2021 Datadog, Inc.
// Licensed under the Apache License, Version 2.0

syntax = "proto3";

package ddsketch.pb;

option go_package = "github.com/DataDog/sketches-go/ddsketch/pb/sketchpb";

// A DDSketch is essentially a histogram that partitions the range of positive values into an infinite number of
// indexed bins whose size grows exponentially. It keeps track of the number of values (or possibly floating-point
// weights) added to each bin. Negative values are partitioned like positive values, symmetrically to zero. The value
// zero as well as its close neighborhood that would be mapped to extreme bin indexes is mapped to a specific counter.
message DDSketch {
  // The mapping between positive values and the bin indexes they belong to.
  IndexMapping mapping = 1;
  // The store for keeping track of positive values.
  Store positiveValues = 2;
  // The store for keeping track of negative values. A negative value v is mapped using its positive opposite -v.
  Store negativeValues = 3;
  // The count for the value zero and its close neighborhood (whose width depends on the mapping).
  double zeroCount = 4;
}

// How to map positive values to bin indexes.
message IndexMapping {
  // The gamma parameter of the mapping, such that bin index = log(v)/log(gamma).
  double gamma = 1;
  // An offset that can be used to shift all bin indexes.
  double indexOffset = 2;
  // To speed up the computation of the index a value is mapped to, a specific interpolation function is used, which is
  // specified in an interpolation field.
  Interpolation interpolation = 3;
}

// The interpolation method used to compute the log.
enum Interpolation {
  NONE = 0;
  LINEAR = 1;
  QUADRATIC = 2;
  CUBIC = 3;
}

// A Store maps bin indexes to their respective counts. It can represent a map from bin indexes to counts with two
// different methods: one that enumerates non-empty bins, and one that encodes the counts of contiguous bins.
message Store {
  // A map from bin index to bin count. Only non-empty bins are stored.
  map<sint32, double> binCounts = 1;
  // A representation of contiguous bins, starting at contiguousBinIndexOffset. This is useful when bins are densely
  // filled.
  repeated double contiguousBinCounts = 2;
  // The index of the first bin whose count is stored in contiguousBinCounts.
  sint32 contiguousBinIndexOffset = 3;
}
